[package]
name = "rustyline-nightly"
version = "2.0.0-alpha-20180628"
authors = ["Katsu Kawakami <kkawa1570@gmail.com>"]
description = "Unofficial nightly releases of Rustyline"
documentation = "http://docs.rs/rustyline"
repository = "https://github.com/datafusion-rs/rustyline"
readme = "README.md"
keywords = ["readline"]
license = "MIT"
categories = ["command-line-interface"]

[badges]
travis-ci = { repository = "kkawakam/rustyline" }
appveyor = { repository = "kkawakam/rustyline" }
maintenance = { status = "actively-developed" }

[dependencies]
libc = "0.2"
log = "0.4"
unicode-width = "0.1"
unicode-segmentation = "1.0"

[target.'cfg(unix)'.dependencies]
nix = "0.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "minwindef", "processenv", "winbase", "wincon", "winuser"] }

[dev-dependencies]
tempdir = "0.3"
assert_matches = "1.2"
